test/assets/invalid/let/expect-char.hs
import Data.Char (isSpace)

a = let b = "a" in isSpace b